fix invisible notebook arrow

--- a/common/gtk-3.0/3.14/gtk-contained-darker.css
+++ b/common/gtk-3.0/3.14/gtk-contained-darker.css
@@ -1512,7 +1512,7 @@ column-header .button, column-header .button:hover, column-header .button:active
     .notebook.arrow:active {
       color: #5c616c; }
     .notebook.arrow:insensitive {
-      color: rgba(92, 97, 108, 0); }
+      color: rgba(92, 97, 108, 0.25); }
 
 /**************
  * Scrollbars *
