--- a/common/gtk-3.0/3.16/gtk-contained-solid-dark.css
+++ b/common/gtk-3.0/3.16/gtk-contained-solid-dark.css
@@ -1526,7 +1526,7 @@ column-header .button, column-header .button:hover, column-header .button:active
     .notebook.arrow:active {
       color: #D3DAE3; }
     .notebook.arrow:insensitive {
-      color: rgba(211, 218, 227, 0); }
+      color: rgba(211, 218, 227, 0.15); }
 
 /**************
  * Scrollbars *
